Upgrade to ember-cli 3.15

--- a/app/styles/material_lite.scss
+++ b/app/styles/material_lite.scss
@@ -1,5 +1,5 @@
 /* Theme Setting */
-@import "_color-definitions";
+@import "color-definitions";
 $color-primary: $palette-teal-500 ;
 $color-primary-dark: $palette-teal-700;
 $color-accent: $palette-red-A200 ;
